# Kubectui

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CLAUDE.md  COVERAGE_REPORT.md  Cargo.toml  DAEMONSET_COMPLETION_REPORT.md  DAEMONSET_IMPLEMENTATION_SUMMARY.md  DESIGN.md  INTEGRATION_CHECKPOINT.md  LICENSE  PHASE_2_CONTEXT_SWITCHING.md  PHASE_2_IMPLEMENTATION.md  README.md  STREAM_D_IMPLEMENTATION.md  TESTING_KIND.md  TESTING_RESULTS.md  TEST_SESSION_2026-02-23.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  migration-3.0.1.md  phase8.md  plan.md  test_age_ordering
.claude/: settings.json  settings.local.json
.codex/skills/kubectui-ratatui-engineer/: SKILL.md
.github/workflows/: ci.yml  performance-gate.yml  release.yml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
.serena/memories/engineering/: performance_invariant.md
.superpowers/brainstorm/39551-1773116083/: tree-layout.html
benches/: dashboard.rs  filter_sort.rs  format_helpers.rs
benches/common/: mod.rs
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md
conductor/tracks/cached-cells_20260312/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/perf-bottlenecks_20260312/: index.md  metadata.json  plan.md  spec.md
docs/: E2E_PHASE4_REPORT.md  release-checklist.md
docs/migrations/: kube-3.x-migration.md
docs/plans/: 2026-03-09-milestone-6-discoverability-qol.md  2026-03-09-milestone-7-clipboard-export.md  2026-03-09-milestone-8-enhanced-detail.md  2026-03-10-milestone-9-action-palette-v2-impl.md  2026-03-10-milestone-9-action-palette-v2.md  2026-04-24-flux-ui-ux-regression-tasks.md  2026-04-24-flux-ui-ux-regression-watchlist.md  review-scope-audit.md
docs/superpowers/plans/: 2026-03-10-relationship-explorer.md  2026-03-11-m14-view-personalization.md  2026-03-18-phase1-refactoring.md  2026-05-02-native-ai-actions.md
docs/superpowers/specs/: 2026-03-10-m11-node-operations-design.md  2026-03-10-relationship-explorer-design.md  2026-03-11-m14-view-personalization-design.md  2026-03-18-nerd-font-icons-design.md
scripts/: kind_smoke.sh  perf_gate.sh  publish_release_tag.sh  release.sh
src/: action_history.rs  ai.rs  ai_actions.rs  app.rs  async_types.rs  authorization.rs  bookmarks.rs  clipboard.rs  columns.rs  config_file.rs  cronjob.rs  detail_fetch.rs  detail_sections.rs  event_handlers.rs  export.rs  extensions.rs  flux_reconcile.rs  global_search.rs  governance.rs  icons.rs  lib.rs  log_investigation.rs  main.rs  main_tests.rs  mutation_helpers.rs  network_policy_analysis.rs  network_policy_connectivity.rs  network_policy_semantics.rs  policy.rs  preferences.rs  process.rs  projects.rs  rbac_subjects.rs  resource_diff.rs  resource_templates.rs  runbooks.rs  runtime_helpers.rs  secret.rs  selection_helpers.rs  startup.rs  (+6 more)
src/action/: copy_export.rs  cronjob.rs  debug.rs  delete.rs  detail_tabs.rs  helm.rs  mod.rs  node_debug.rs  node_ops.rs  rollout.rs  scale.rs  wait_ready.rs
src/app/: config_io.rs  core.rs  detail_state.rs  input.rs  mod.rs  navigation.rs  preferences.rs  resource_ref.rs  sidebar.rs  sort.rs  tests.rs  views.rs  workbench.rs
src/coordinator/: logs.rs  mod.rs  probes.rs
src/events/: input.rs  mod.rs
src/k8s/: client.rs  conversions.rs  dtos.rs  events.rs  exec.rs  flux.rs  gateway_api.rs  gateway_semantics.rs  helm.rs  logs.rs  mod.rs  node_debug.rs  portforward.rs  portforward_errors.rs  probes.rs  relationships.rs  rollout.rs  scaling.rs  selectors.rs  workload_logs.rs  yaml.rs
src/state/: alerts.rs  fetch.rs  filters.rs  issues.rs  mod.rs  optimistic.rs  port_forward.rs  refresh.rs  scale_queue.rs  vulnerabilities.rs  watch.rs
src/ui/: components.rs  filter_cache.rs  keybindings.rs  mod.rs  profiling.rs  render_cache.rs  theme.rs
src/ui/components/: command_palette.rs  common.rs  context_picker.rs  debug_container_dialog.rs  help_overlay.rs  input_field.rs  logs_view.rs  mod.rs  namespace_picker.rs  node_debug_dialog.rs  port_forward_dialog.rs  probe_panel.rs  resource_template_dialog.rs  scale_dialog.rs  (+1 more)
tests/: app_navigation.rs  coordinator_integration.rs  custom_resource_tests.rs  daemonset_integration.rs  daemonset_tests.rs  daemonset_view_tests.rs  event_loop_tests.rs  filters_integration.rs  integration_test_portforward.rs  keybind_contract_tests.rs  kind_smoke.rs  performance.rs  portforward_operations_tests.rs  probe_panel_tests.rs  scale_dialog_tests.rs  scale_operations_tests.rs  state_management.rs  updates_tests.rs
tests/common/: mod.rs
(+47 files in other folders)
