[package]
name = "kubectui"
version = "1.0.3"
edition = "2024"
description = "A keyboard-first terminal UI for Kubernetes operations"
license = "MIT"
repository = "https://github.com/kxxil01/Kubectui"
readme = "README.md"
keywords = ["kubernetes", "tui", "terminal", "kubectl", "k8s"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
kube = { version = "0.92", features = ["client", "ws"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
cronexpr = "1.4.0"
async-trait = "0.1"
base64 = "0.22"
dashmap = "5.5"
dirs = "5"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "dashboard"
harness = false

[[bench]]
name = "filter_sort"
harness = false

[[bench]]
name = "format_helpers"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
