[package]
name = "kubectui"
version = "1.1.19"
edition = "2024"
description = "A keyboard-first terminal UI for Kubernetes operations"
license = "MIT"
repository = "https://github.com/kxxil01/Kubectui"
readme = "README.md"
keywords = ["kubernetes", "tui", "terminal", "kubectl", "k8s"]
categories = ["command-line-utilities"]

[features]
test-utils = []

[dependencies]
ratatui = "0.30.0"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
kube = { version = "3.1.0", features = ["client", "ws", "runtime", "gzip"] }
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
regex = "1.12.3"
crossterm = { version = "0.29", features = ["event-stream"] }
log = "0.4.29"
env_logger = "0.11.10"
jiff = { version = "0.2.24", features = ["serde"] }
cronexpr = "1.5.0"
async-trait = "0.1.89"
base64 = "0.22.1"
dashmap = "6.1"
dirs = "6"
futures = "0.3.32"
paste = "1.0.15"
tower = { version = "0.5.3", features = ["buffer", "retry"] }
notify = "8.2.0"
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }
kubectui = { path = ".", features = ["test-utils"] }

[[bench]]
name = "dashboard"
harness = false

[[bench]]
name = "filter_sort"
harness = false

[[bench]]
name = "format_helpers"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
